--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ TEXTOS               -
 
  ------------------------------------------------------------ */
 :root {
+    --bg-principal: #68A2C8;
+    --bg-secundario: #F1C721;
+    --text-color-primario: #042437;
+    --text-color-secundario: #5b5c5c;
+    --text-color-terceiro: #fff;
     --bg-color: #CBECDC;
     --second-bg-color: #F1C721;
     --text-color: #042437;
@@ -49,7 +54,6 @@ html {
 }
 
 body {
-    background: var(--bg-color);
     color: var(--text-color);
 }
 
@@ -60,7 +64,7 @@ body {
     width: 100%;
     height: 60px;
     padding: 2rem 9%;
-    background: var(--second-bg-color);
+    background: var(--bg-principal);
     border-bottom: 1px solid rgba(166, 166, 166, 0.242);
     display: flex;
     justify-content: space-between;
@@ -91,7 +95,7 @@ body {
 
 .navbar a {
     font-size: 1.4rem;
-    color: var(--text-color);
+    color: var(--text-color-terceiro);
     margin-left: 4rem;
     font-weight: 500;
     transition: 0.3s ease;
@@ -100,8 +104,8 @@ body {
 
 .navbar a:hover,
 .navbar a.active {
-    color: var(--main-color);
-    border-bottom: 3px solid var(--main-color);
+    color: var(--bg-color);
+    border-bottom: 3px solid var(--bg-color);
 
 }
 
@@ -191,11 +195,11 @@ span {
 .btn {
     display: inline-block;
     padding: 1rem 2.8rem;
-    background: var(--main-color);
+    background: var(--bg-secundario);
     border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
+    box-shadow: 0 0 1rem var(--bg-secundario);
     font-size: 1.6rem;
-    color: white;
+    color: var(--text-color-primario);
     letter-spacing: 0.1rem;
     font-weight: 600;
     transition: 0.3s ease;
@@ -206,7 +210,7 @@ span {
 
 .btn:hover {
     box-shadow: none;
-    color: var(--text-color);
+    color: var(--text-color-terceiro);
 }
 
 /* Acomodações --------------------------------------------------------------------------------  */
