--- a/style.css
+++ b/style.css
@@ -646,7 +646,7 @@ span {
     bottom: 0;
     width: 100%;
     padding: 40px 0;
-    background-color: var(--second-bg-color);
+    background-color: var(--bg-principal);
 }
 
 .footer .social {
@@ -658,7 +658,7 @@ span {
 .footer .social a {
     font-size: 24px;
     color: var(--text-color);
-    border: 2px solid var(--main-color);
+    border: 2px solid var(--bg-color);
     width: 40px;
     height: 40px;
     line-height: 38px;
@@ -666,14 +666,14 @@ span {
     text-align: center;
     border-radius: 50%;
     margin: 0 8px;
-    box-shadow: inset 0 0 10px var(--main-color), 0 0 25px var(--main-color);
+    box-shadow: inset 0 0 10px var(--bg-color), 0 0 25px var(--bg-color);
     transition: 0.3s ease;
 }
 
 .footer .social a:hover {
     transform: scale(1.2) translateY(-10px);
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
+    color: var(--bg-color);
+    border: 2px solid var(--bg-color);
 }
 
 .footer ul {
@@ -805,3 +805,90 @@ span {
     }
 
 }
+
+/*  PÁGINA DE SUITES DUPLAS E OUTRAS -------------------------------------------------------- */
+
+.section-slide {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.heading {
+    text-align: center;
+    font-size: 3.4rem;
+    border-bottom: 2px solid var(--main-color);
+    margin-bottom: 3rem;
+}
+
+.slideshow-container {
+    position: relative;
+    max-width: 800px;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 3rem;
+  }
+  
+  .slideshow {
+    display: flex;
+    transition: transform 0.5s ease;
+  }
+  
+  .slide {
+    flex: 0 0 100%;
+    width: 100%;
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+  }
+  
+  /* Botões de navegação */
+  .prev,
+  .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 1.5em;
+  }
+  
+  .prev {
+    left: 10px;
+  }
+  
+  .next {
+    right: 10px;
+  }
+  
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /*
+  a {
+    color: #fff;
+    background: #797674;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    margin: 15px 0;
+    border-radius: 0.5rem;
+    transition: 0.8s ease-in-out;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    border: 3px solid transparent;
+  }
+  
+  a:hover {
+    color: #797674;
+    background: #dddddd;
+    border: 3px solid #797674;
+  }*/
+  
