--- a/style.css
+++ b/style.css
@@ -347,11 +347,7 @@ span {
 /* Pousada --------------------------------------------------------------------------------  */
 
 .pousada {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10rem;
-    background: var(--second-bg-color);
+    background: var(--text-color-primario);
 }
 
 .pousada-img {}
@@ -370,7 +366,9 @@ span {
     line-height: 1.5;
 
 }
-
+.pousada h2 {
+    color: var(--bg-principal);
+}
 .pousada-content h3 {
     font-size: 1.6rem;
 }
@@ -379,6 +377,108 @@ span {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    gap: 2rem;
+}
+
+.card-box {
+    max-width: 500px;
+    border: 2px solid #042437;
+    background: #fff;
+    border-radius: 0.6rem;
+    overflow: hidden;
+    transition: 0.5s ease-in-out;
+}
+
+.card-box:hover img {
+    opacity: 0.8;
+}
+
+.card-box:hover {
+    transform: translateY(-5px);
+
+}
+.card-box img {
+    width: 100%;
+}
+
+.card-box h4 {
+    padding: 1rem;
+    text-align: center;
+}
+
+/* Depoimentos ------------------------------------------------------------------------------- */
+
+.depoimentos {
+    height: auto;
+}
+
+.depoimentos h2 {
+    margin-bottom: 5rem;
+}
+
+.depoimentos-container {
+    border: 2px solid #042437;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 1rem;
+    
+}
+
+.depoimentos-box {
+
+    width: 350px;
+    height: auto;
+    padding: 2rem;
+    border-radius: 2rem;
+    border: 0.2rem solid var(--main-color);
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+
+.depoimentos-container .depoimentos-box:hover {
+    border-color: var(--text-color);
+    transform: translateY(-5px);
+}
+
+
+.depoimentos-box h4 {
+    font-size: 2.2rem;
+    text-align: center;
+
+}
+
+.depoimentos-box p {
+    
+    font-size: 1.2rem;
+    text-align: center;
+
+}
+
+.card-depoimento-img {
+
+    position: relative;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.card-depoimento-img img {
+
+position: absolute;
+top: -6px;
+    width: 100%;
 }
 
 /* Atividades --------------------------------------------------------------------------------  */
@@ -541,7 +641,7 @@ span {
     position: relative;
     flex: 1 1 30rem;
     height: 600px;
-    background: var(--bg-color);
+    /*background: var(--bg-color);*/
     padding: 2rem;
     border-radius: 2rem;
     /*text-align: center;*/
@@ -871,7 +971,35 @@ span {
   .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
   }
-  
+
+  .cardBox-container {
+    display: flex;
+    flex-flow: row nowrap;
+  }
+
+  .cardBox-slider {
+    width: 50%;
+  }
+  .cardBox-slider img {
+    width: 100%;
+  }
+
+  .cardBox-suite {
+    padding: 1rem;
+  }
+  .cardBox-suite h3 {
+    margin-bottom: 0.5rem;
+  }
+  .cardBox-suite p {
+    margin-bottom: 1rem;
+  }
+  .cardBox-suite ul {
+    margin-bottom: 1rem;
+  }
+  .cardBox-suite li {
+    list-style: none;
+    padding: 0.2rem 0;
+  }
   /*
   a {
     color: #fff;
