--- a/suites.css
+++ b/suites.css
@@ -170,6 +170,7 @@ section {
     display: flex;
     flex-flow: row nowrap;
     margin-bottom: 1.4rem;
+    gap: 1rem;
   }
 
   .cardBox-slider {
@@ -184,6 +185,11 @@ section {
   }
   .cardBox-suite h3 {
     margin-bottom: 0.5rem;
+    border-bottom: 2px solid var(--bg-principal);
+    color: var(--bg-principal);
+    text-transform: uppercase;
+    letter-spacing: 0.05rem;
+
   }
   .cardBox-suite p {
     margin-bottom: 1rem;
@@ -198,93 +204,83 @@ section {
   }
 
 /* Rodapé --------------------------------------------------------------------------------  */
-
 .footer {
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    padding: 40px 0;
-    background-color: var(--bg-principal);
+
+  width: 100%;
+  height: 220px;
+  padding: 40px 0;
+  background-color: var(--bg-principal);
 }
 
 .footer .social {
-    text-align: center;
-    padding-bottom: 25px;
-    color: black;
+  text-align: center;
+  padding-bottom: 25px;
+  color: black;
 }
 
 .footer .social a {
-    font-size: 24px;
-    color: var(--text-color);
-    border: 2px solid var(--bg-color);
-    width: 40px;
-    height: 40px;
-    line-height: 38px;
-    display: inline-block;
-    text-align: center;
-    border-radius: 50%;
-    margin: 0 8px;
-    box-shadow: inset 0 0 10px var(--bg-color), 0 0 25px var(--bg-color);
-    transition: 0.3s ease;
+  text-decoration: none;
+  font-size: 24px;
+  color: var(--text-color-primario);
+  border: 2px solid var(--text-color-primario);
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+  transition: 0.3s ease;
 }
 
 .footer .social a:hover {
-    transform: scale(1.2) translateY(-10px);
-    color: var(--bg-color);
-    border: 2px solid var(--bg-color);
+  transform: scale(1.2) translateY(-10px);
+  color: var(--text-color-terceiro);
+  border: 2px solid var(--text-color-terceiro);
 }
 
 .footer ul {
-    margin-top: 0;
-    padding: 0;
-    font-size: 18px;
-    line-height: 1.6;
-    margin-bottom: 0;
-    text-align: center;
+  font-size: 18px;
+  line-height: 1.6;
+  text-align: center;
 }
 
 .footer ul li {
-    display: inline-block;
-    padding: 0 15px;
+  display: inline-block;
+  padding: 0 15px;
 }
 
 .footer ul li a {
-    color: var(--text-color);
-    border-bottom: 3px solid transparent;
-    transition: 0.3s ease;
+  text-decoration: none;
+  color: var(--text-color);
+  border-bottom: 3px solid transparent;
+  transition: 0.3s ease;
 }
 
 .footer ul li a:hover {
-    border-bottom: 3px solid var(--main-color);
+  color: var(--text-color-terceiro);
+  border-bottom: 3px solid var(--text-color-terceiro);
 }
 
 .footer .copyright {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 12px;
-    color: var(--text-color);
+  margin-top: 15px;
+  text-align: center;
+  font-size: 12px;
+  color: var(--text-color);
 }
 
 .footer .btn-top {
-    position: absolute;
-    top: 70px;
-    right: 10px;
-    padding: 12px 20px;
-    background: #042437;
-    color: #CBECDC;
-    font-size: 2rem;
-    text-align: center;
-    border-radius: 50%;
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  padding: 12px 20px;
+  background: #042437;
+  color: #CBECDC;
+  font-size: 2rem;
+  text-align: center;
+  border-radius: 50%;
 }
 
-.section-slide {
-
-    /*display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;*/
-
-}
 /* SLIDER -------------------------------------------------------------------------------------- */
 
 .slideshow-container {
