--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
+    color: var(--text-color-primario)
 }
 
 :root {
@@ -67,7 +68,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1;
+    z-index: 100;
     border-bottom: 1px solid rgba(166, 166, 166, 0.242);
 }
 
@@ -163,11 +164,12 @@ body {
 
 .social-icons {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: start;
+
 }
 
-.social-icons a {
+.social-icons a i {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -182,19 +184,31 @@ body {
     transition: 0.3s ease;
 }
 
+.social-icons a:hover i {
+    border: 0.2rem solid var(--bg-principal);
+    color: var(--bg-principal);
+}
+
+.social-icons a svg {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    background-color: transparent;
+    border: 0.2rem solid var(--text-color-primario);
+    border-radius: 50%;
+    fill: var(--text-color-primario);
+    margin: 3.1rem 1.5rem 3rem 0;
+    transition: 0.3s ease;
+}
+
+.social-icons a svg:hover {
+    border: 0.2rem solid var(--bg-principal);
+}
+
 .social-icons a svg:hover path {
     fill: #68A2C8;
-}
-
-.social-icons a img:hover {
-    fill: #042437;
-}
-
-.social-icons a:hover {
-    color: var(--bg-principal);
-    border: 0.2rem solid var(--bg-principal);
-    /*box-shadow: 0 0 25px var(--bg-principal), 0 0 50px var(--bg-principal);*/
-
 }
 
 .btn {
@@ -220,6 +234,15 @@ body {
 }
 
 /* FINAL HERO SECTION -------------------------------*/
+
+.heading {
+    font-size: calc(20px + 1.5vw);
+    color: var(--text-color-primario);
+    font-weight: 600;
+    text-transform: uppercase;
+    border-bottom: 2px solid var(--bg-principal);
+    margin-bottom: 2rem;
+}
 
 /* ACOMODAÇÕES --------------------------------------------------------------------------------  */
 
@@ -354,9 +377,146 @@ body {
 
 .saiba-mais a {
     text-decoration: none;
+    margin-top: 0.5rem;
+}
+
+.saiba-mais p {
+    color: var(--bg-secundario);
+    font-size: 1.6rem;
+}
+
+.saiba-mais p:nth-of-type(1) {
+    color: var(--text-color-primario);
+    font-size: 1.2rem;
+}
+
+.saiba-mais p:nth-of-type(3) {
+    color: var(--text-color-primario);
+    font-size: 1rem;
+    margin: 0.5rem;
+}
+
+.saiba-mais p span {
+    font-weight: 500;
+    color: var(--text-color-primario);
+    background: var(--bg-secundario);
+    padding: 0.2rem 0.4rem;
+    border-radius: 0.3rem;
+    font-size: 1rem;
+}
+
+.saiba-mais p em {}
+
+.saiba-mais p em strong {}
+
+.carousel {
+    width: 100%;
+    height: 166px;
+    margin-top: 2rem;
+}
+
+.card-container {
+
+    margin: 0 auto;
+    max-width: 1000px;
+    display: flex;
+    /*overflow-x: auto;  Define overflow na rolagem horizontal */
+    overflow: hidden;
+    /*background: #ccc;*/
+}
+
+.card-container ::-webkit-scrollbar {
+    display: none;
+}
+
+.card {
+
+    scroll-snap-align: start;
+    min-width: 200px;
+    height: 100px;
+    width: calc (100% - 16px);
+    margin: 8px;
+    flex: 0 0 calc (100% - 16px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: var(--bg-secundario);
+    border: 1px solid #4f5873;
+    color: #000;
+    border-radius: 8px;
+}
+
+.card img {
+    width: 30%;
 }
 
 
+
+.servicos-container {
+    width: 100%;
+    padding: 0 8% 0px;
+    margin: 2rem 0;
+    position: relative;
+
+}
+
+.servicos-slider {
+    margin: 0 auto;
+    max-width: 1000px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    background: #042437;
+
+}
+
+.servicos-slider-item {
+    width: 120px;
+    height: 120px;
+    background: #5b5c5c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+#servicos-prev-btn {
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    user-select: none;
+    background-color: var(--bg-principal);
+    color: var(--text-color-terceiro);
+    padding: 10px 18px;
+    position: absolute;
+    top: 30px;
+    left: 120px;
+}
+
+#servicos-next-btn {
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    user-select: none;
+    background-color: var(--bg-principal);
+    color: var(--text-color-terceiro);
+    padding: 10px 18px;
+    position: absolute;
+    top: 30px;
+    right: 120px;
+}
+
+#servicos-prev-btn:hover,
+#servicos-next-btn:hover {
+    background-color: var(--text-color-primario);
+}
 
 /* FINAL ACOMODAÇÕES ------------------------------ */
 
@@ -393,8 +553,16 @@ body {
     width: 50%;
 }
 
+.pousada-text ul {
+    margin-bottom: 1rem;
+}
+
 .pousada-text ul li {
-    list-style: none;
+    list-style: square inside;
+}
+
+.pousada-text h3 {
+    margin: 0 0 1rem;
 }
 
 .pousada-slideshow-container {
@@ -640,10 +808,12 @@ body {
 .depoimentos-tools {
     margin: 0 auto;
     width: 100%;
+    height: 350px;
     padding: 50px 20px;
     max-width: 900px;
     position: relative;
     overflow: hidden;
+
 }
 
 .depoimentos .slide {
@@ -656,8 +826,8 @@ body {
 }
 
 .depoimentos i {
-    font-size: 90px;
-    color: var(--bg-secundario);
+    font-size: 2rem;
+    color: var(--bg-principal);
 }
 
 .depoimentos p.depoi-txt {
@@ -688,65 +858,30 @@ body {
     font-size: 14px;
 }
 
-@media screen and (max-width: 768px) {
-    .nav-btn {
-        display: none;
-    }
-}
-
-
-
-
-/*
-.depoimentos-box {
-
-    width: 650px;
-    height: auto;
-    padding: 2rem;
-    border-radius: 2rem;
-    border: 0.2rem solid var(--main-color);
-    cursor: pointer;
-    transition: 0.5s ease;
-    border: 1px solid;
-}
-
-
-.depoimentos-container .depoimentos-box:hover {
-    border-color: var(--text-color);
-    transform: translateY(-5px);
-}
-
-
-.depoimentos-box h4 {
-    font-size: 2.2rem;
-    text-align: center;
-
-}
-
-.depoimentos-box p {
-
-    font-size: 1.2rem;
-    text-align: center;
-
-}
-
-.card-depoimento-img {
-
-    position: relative;
-    margin: 0 auto;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.card-depoimento-img img {
-
-    position: absolute;
-    top: -6px;
+/* CONTATOS --------------------------------------------------------------------------------  */
+.contato {
     width: 100%;
+    height: auto;
+    padding: 5rem 8% 0px;
+    text-align: center;
+
 }
-*/
+
+.contato h2 {
+    text-align: left;
+}
+
+.contato p {
+    margin-bottom: 1rem;
+}
+
+/* LOCALIZAÇÃO --------------------------------------------------------------------------------  */
+.localizacao {
+    width: 100%;
+    height: auto;
+    padding: 1rem 8%;
+}
+
 /* Rodapé --------------------------------------------------------------------------------  */
 
 .footer {
@@ -780,8 +915,11 @@ body {
 
 .footer .social a:hover {
     transform: scale(1.2) translateY(-10px);
-    color: var(--text-color-terceiro);
     border: 2px solid var(--text-color-terceiro);
+}
+
+.footer .social a:hover i {
+    color: var(--text-color-terceiro);
 }
 
 .footer ul {
@@ -797,7 +935,7 @@ body {
 
 .footer ul li a {
     text-decoration: none;
-    color: var(--text-color);
+    color: var(--text-color-primario);
     border-bottom: 3px solid transparent;
     transition: 0.3s ease;
 }
@@ -814,26 +952,50 @@ body {
     color: var(--text-color);
 }
 
-.footer .btn-top {
-    position: absolute;
-    top: 70px;
+.btn-whatsapp {
+
+    position: fixed;
+    bottom: 30px;
     right: 10px;
     padding: 12px 20px;
-    background: #042437;
-    color: #CBECDC;
+    background: #0ba360;
     font-size: 2rem;
     text-align: center;
     border-radius: 50%;
+    animation: explode-borda 1s infinite;
+
+}
+
+.btn-whatsapp i {
+    color: var(--text-color-terceiro);
+}
+
+@keyframes explode-borda {
+    from {
+        outline: 4px solid rgba(11, 163, 96, 1);
+        outline-offset: 0.5rem;
+
+    }
+
+    to {
+        outline: 4px solid rgba(11, 163, 96, 0);
+        outline-offset: 0;
+
+    }
 }
 
 /* MEDIA QUERY - LAYOUTS RESPONSIVOS ----------------------------------------------------------- */
 
-@media(max-width:1200px) {}
+@media screen and (max-width: 1200px) {}
 
-@media(max-width:991px) {}
+@media screen and (max-width: 991px) {}
 
-@media(max-width:768px) {
+@media screen and (max-width: 768px) {
     .header {}
+
+    .nav-btn {
+        display: none;
+    }
 
     #menu-icon {
         display: block;
