--- a/atividades.css
+++ b/atividades.css
@@ -174,19 +174,8 @@ section {
     gap: 1rem;
   }
 
-  .cardBox-slider {
-    max-width: 45%;
-    height: 335px;
-    overflow: hidden;
-
-  }
-  .cardBox-slider img {
-    width: 100%;
-    height: 100%;
-  }
-
   .cardBox-suite {
-    max-width: 50%;
+    width: 600px;
     height: 335px;
 
     display: flex;
@@ -196,7 +185,6 @@ section {
   }
   .cardBox-suite h3 {
     margin-bottom: 0.5rem;
-
     align-self: stretch;
     border-bottom: 2px solid var(--bg-principal);
     color: var(--bg-principal);
@@ -223,7 +211,7 @@ section {
 .pousada-slideshow-container {
 
   position: relative;
-  max-width: 550px;
+  max-width: 500px;
   width: 100%;
   height: auto;
   overflow: hidden;
@@ -242,7 +230,7 @@ section {
   height: 400px;
   background-size: cover;
   background-position: bottom left;
-  border: 1px solid red;
+
 }
 
 .pousada-slide img {
