--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ SPAN-TEXTO - 16px = 1rem | 14px = 0.875rem
 
 ------------------------------------------------------------ */
 
-body {
-    color: var(--text-color-primario);
-
-}
 
 /* MENU NAV ---------------------------------- */
 .header {
@@ -96,8 +92,9 @@ body {
     color: var(--text-color);
     margin-left: 1rem;
     font-weight: 500;
-    transition: 0.3s ease;
+    transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     border-bottom: 3px solid transparent;
+
 }
 
 .navbar a:hover,
@@ -107,11 +104,19 @@ body {
 
 }
 
-#menu-icon {
-    font-size: 3.2rem;
-    color: var(--text-color-terceiro);
+.mobile-menu {
     display: none;
-}
+    cursor: pointer;
+  }
+  
+  .mobile-menu div {
+    width: 32px;
+    height: 2px;
+    background: white;
+    margin: 8px;
+    border-radius: 8px;
+  }
+
 
 /* FINAL MENU NAV ---------------------------------- */
 
@@ -319,14 +324,12 @@ body {
 .slider .slider-item {
     position: absolute;
     width: 320px;
-    height: 180px;
-    /* resolvendo o problema da imagem */
+    height: 150px;
     border-radius: 1rem;
     top: 0;
     left: 0;
     transition: left 0.5s cubic-bezier(0.645, 0.045, 0.354, 1);
     overflow: hidden;
-    border: 1px solid #d3d1d0;
     border-radius: 0.5rem;
 
 }
@@ -363,12 +366,15 @@ body {
     left: calc((320px + 20px) * 6);
 }
 
+/* CSS DO CARD DAS IMAGENS DAS ACOMODAÇÕES */
 .slider-item .cardBox-img {
-    max-width: 100%;
+
 }
 
 .slider-item .cardBox-img img {
-    width: 100%;
+width: max-content;
+
+
 }
 
 .saiba-mais {
@@ -995,7 +1001,104 @@ body {
 
 @media screen and (max-width: 991px) {}
 
+@media screen and (max-width: 900px){
+    .header {
+    }
+  
+    .nav-btn {
+      display: none;
+    }
+
+    .navbar {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      background: var(--bg-principal);
+      /*border-top: 0.1rem solid rgba(0, 0, 0, 0.104);*/
+      display: none;
+    }
+  
+    .navbar.active {
+      display: block;
+    }
+  
+    .navbar a {
+      display: block;
+      font-size: 1rem;
+      margin: 2rem 0;
+      text-align: center;
+    }
+  
+    .mobile-menu.active .line1 {
+      transform: rotate(45deg) translate(10px, 10px);
+      background: var(--text-color-terceiro);
+    }
+  
+    .mobile-menu.active .line2 {
+      opacity: 0; /* Oculta a linha do meio */
+    }
+  
+    .mobile-menu.active .line3 {
+      transform: rotate(-45deg) translate(5px, -5px);
+      background: var(--text-color-terceiro);
+    }
+  
+    .mobile-menu div {
+      transition: all 0.3s ease;
+    }
+  
+    .mobile-menu {
+      display: block;
+    }
+    .home {
+        align-items: start;
+    
+    }
+    .home-img img {
+        max-width: 300px;
+        max-height: 300px;
+        padding: 0.5rem;
+    }
+    .home-content h1 {
+        font-size: 3rem;
+    }
+
+    .carousel {
+
+    }
+    
+    .card-container {
+        max-width: 700px;
+
+    }
+
+    .pousada {
+        width: 100%;
+        height: auto;
+        
+    
+    }
+
+    .pousada-container {
+        flex-flow: wrap;
+    }
+
+    .pousada-text p:last-child {
+        margin-bottom: 1rem;
+    }
+
+    .prev,
+    .next {
+
+        top: 50%;
+        transform: translateY(-50%);
+
+    }
+  }
+
 @media screen and (max-width: 768px) {
+
     .header {}
 
     .nav-btn {
@@ -1013,7 +1116,7 @@ body {
         left: 0;
         width: 100%;
         background: var(--bg-principal);
-        border-top: .1rem solid rgba(0, 0, 0, 0.104);
+        /*border-top: .1rem solid rgba(0, 0, 0, 0.104);*/
         display: none;
     }
 
